feat: add Redis caching to getUserById using Spring Cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring:cache:type: redisredis:host: localhost
+  port: 6379
+#logging.level.io.netty=ERROR
+#spring:redis:client-type: jedis
+
